PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, Version 4.3.6
- Fixed bug #27732 (Fixed compilation bug inside php_sab_info.h). (Ilia)
- Fixed bug #27731 (error_reporting() inside @ block fails to set
  error_reporting level). (Ilia)
- Fixed bug #27719 (mktime issues on and around DST changeover). (Rasmus)
- Fixed bug #27717 (Test Failures when compiled on 64-bit mode). (Ard, Derick)
- Fixed bug #27687 (Bug Adding Default Charset to 'text/*' Content-Type 
  Header). (Marcus)
- Fixed bug #27664 (--disable-cli doesn't force --without-pear). (Ilia)
- Fixed bug #27663 (compile failure with cURL 7.11.1). (Ilia)
- Fixed bug #27646 (Cannot serialize/unserialize non-finite numeric values).
  (Marcus)

26 Mar 2004, Version 4.3.5
- Fixed possible crash using an invalid color index with a palette image in
  imagecolortransparent (Pierre)
- Fixed php-cgi to not ignore command-line switches when run in a web context.
  This fixes our test cases allowing INI with GET sections to work (Rasmus)
- Fixed getopt() so it works without $_SERVER (Rasmus, bfrance)
- Fixed crash in php_ini_scanned_files() when no additional INI files were
  actually parsed. (Jon)
- Fixed possible crashes inside socket extension, due to missing check inside
  allocation functions. (Ilia)
- Fixed zero bytes memory allocation when no extra ini files are found in the
  --with-config-file-scan-dir specified directory. (Eric Colinet, Derick)
- Changed "allow_url_fopen" php.ini option to be PHP_INI_SYSTEM. (Sara)
- Improved the sybase_ct module: (Timm)
  . Added ability to define a message handler not only globally, but also per
    connection.
  . Added "sybct.packet_size" php.ini option.
  . Changed "sybct.login_timeout" php.ini option changeable at runtime.
  . Fixed memory leak in sybase_set_message_handler().
- Synchronized bundled GD library with GD 2.0.17