@@ -147,6 +147,16 @@ gdImagePtr gdImageCreateFromGd (FILE * inFile)
 	return im;
 }
 
+gdImagePtr gdImageCreateFromGdPtr (int size, void *data)
+{
+	gdImagePtr im;
+	gdIOCtx *in = gdNewDynamicCtxEx(size, data, 0);
+	im = gdImageCreateFromGdCtx(in);
+	in->gd_free(in);
+
+	return im;
+}
+
 gdImagePtr gdImageCreateFromGdCtx (gdIOCtxPtr in)
 {
 	int sx, sy;
