@@ -33,6 +33,7 @@ typedef struct dpStruct
     int realSize;
     int dataGood;
     int pos;
+    int freeOK;
   }
 dynamicPtr;
 
@@ -52,7 +53,7 @@ static int appendDynamic (dynamicPtr * dp, const void *src, int size);
 static int gdReallocDynamic (dynamicPtr * dp, int required);
 static int trimDynamic (dynamicPtr * dp);
 static void gdFreeDynamicCtx (struct gdIOCtx *ctx);
-static dynamicPtr *newDynamic (int initialSize, void *data);
+static dynamicPtr *newDynamic (int initialSize, void *data, int freeOKFlag);
 
 static int dynamicPutbuf (struct gdIOCtx *, const void *, int);
 static void dynamicPutchar (struct gdIOCtx *, int a);
@@ -67,6 +68,11 @@ static long dynamicTell (struct gdIOCtx *);
 gdIOCtx *
 gdNewDynamicCtx (int initialSize, void *data)
 {
+ 	return gdNewDynamicCtxEx(initialSize, data, 1);
+}
+ 
+gdIOCtx * gdNewDynamicCtxEx (int initialSize, void *data, int freeOKFlag)
+{
   dpIOCtx *ctx;
   dynamicPtr *dp;
 
@@ -76,7 +82,7 @@ gdNewDynamicCtx (int initialSize, void *data)
       return NULL;
     }
 
-  dp = newDynamic (initialSize, data);
+  dp = newDynamic (initialSize, data, freeOKFlag);
   if (!dp)
     {
       gdFree (ctx);
@@ -120,7 +126,7 @@ gdDPExtractData (struct gdIOCtx *ctx, int *size)
     {
       *size = 0;
       data = NULL;
-      if (dp->data != NULL)
+      if (dp->data != NULL && dp->freeOK)
 	{
 	  gdFree (dp->data);
 	}
@@ -177,6 +183,10 @@ dynamicSeek (struct gdIOCtx *ctx, const int pos)
   bytesNeeded = pos;
   if (bytesNeeded > dp->realSize)
     {
+    	/* 2.0.21 */
+    	if (!dp->freeOK) {
+    		return FALSE;
+	}
       if (!gdReallocDynamic (dp, dp->realSize * 2))
 	{
 	  dp->dataGood = FALSE;
@@ -199,8 +209,7 @@ dynamicSeek (struct gdIOCtx *ctx, const int pos)
 }
 
 /* return data as a dynamic pointer */
-static dynamicPtr *
-newDynamic (int initialSize, void *data)
+static dynamicPtr * newDynamic (int initialSize, void *data, int freeOKFlag)
 {
   dynamicPtr *dp;
   dp = (dynamicPtr *) gdMalloc (sizeof (dynamicPtr));
@@ -213,6 +222,7 @@ newDynamic (int initialSize, void *data)
     return NULL;
 
   dp->pos = 0;
+  dp->freeOK = freeOKFlag;
 
   return dp;
 }
@@ -348,6 +358,10 @@ appendDynamic (dynamicPtr * dp, const void *src, int size)
 
   if (bytesNeeded > dp->realSize)
     {
+		/* 2.0.21 */
+		if (!dp->freeOK) {
+			return FALSE;
+		}
       if (!gdReallocDynamic (dp, bytesNeeded * 2))
 	{
 	  dp->dataGood = FALSE;
@@ -407,5 +421,9 @@ gdReallocDynamic (dynamicPtr * dp, int required)
 static int
 trimDynamic (dynamicPtr * dp)
 {
-  return gdReallocDynamic (dp, dp->logicalSize);
+ 	/* 2.0.21: we don't reallocate memory we don't own */
+ 	if (!dp->freeOK) {
+ 		return FALSE;
+ 	}
+	return gdReallocDynamic (dp, dp->logicalSize);
 }
