@@ -4638,4 +4638,9 @@ gdFont gdFontLargeRep =
 
 gdFontPtr gdFontLarge = &gdFontLargeRep;
 
+gdFontPtr gdFontGetLarge(void)
+{
+	return gdFontLarge;
+}
+
 /* This file has not been truncated. */
