@@ -1,6 +1,7 @@
 PHP 4                                                                      NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, Version 4.3.6
+- Synchronized bundled GD library with GD 2.0.22. (Ilia)
 - Fixed bug #27732 (Fixed compilation bug inside php_sab_info.h). (Ilia)
 - Fixed bug #27731 (error_reporting() inside @ block fails to set
   error_reporting level). (Ilia)
